remove total time use from trial struct

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             curtrialStruct.totalSetCircleY = setCircleY;
             curtrialStruct.totalGetValue = getValue.slice(-1);
             curtrialStruct.rt = endTime();
-            curtrialStruct.totalTimeUse = timeUse;
+            // curtrialStruct.totalTimeUse = timeUse;
             curtrialStruct.totaliti= iti;
             curtrialStruct.initialTargetCircleSize = initialTargetCircleSize;
             curtrialStruct.taskSize = taskSize
